# StoneOS

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  build.rs  justfile
libs/spin_mutex/: Cargo.toml
libs/spin_mutex/src/: lib.rs
src/: arch.rs  boot.rs  bsp.rs  console.rs  cpu.rs  kernel.rs  main.rs  memory.rs  panic.rs
src/arch/: aarch64.rs
src/arch/aarch64/: boot.rs  cpu.rs
src/arch/aarch64/boot/: bios.rs  boot.asm  legacy.rs
src/arch/aarch64/boot/bios/: boot.asm
src/arch/aarch64/boot/legacy/: boot.asm
src/boot/: bios.rs  legacy.rs  uefi.rs
src/bsp/: rpi4.rs
src/bsp/rpi4/: boot.rs  console.rs  cpu.rs  memory.rs
src/bsp/rpi4/boot/: bios.rs  kernel.ld  legacy.rs
src/bsp/rpi4/console/: p0l11.rs
src/bsp/rpi4/drivers/: pl011.rs
src/bsp/rpi4/memory/: kernel.ld  memory_map.rs
src/console/: null_console.rs  print.rs
src/memory/: address.rs  deref.rs
src/sync/: mutex.rs
