[package]
name = "stone_os"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Emmett Rayes <emmett.rayes@icloud.com>"]

[features]
default = ["bsp_rpi4", "boot_uefi"]
bsp_rpi4 = []
boot_bios = []
boot_uefi = []

[dependencies]
log = "0.4.20"
uefi = "0.26.0"
uefi-services = "0.23.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.4.0"
