[package]
name = "stone_os"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Emmett Rayes <emmett.rayes@icloud.com>"]

[features]
default = ["bsp_rpi4", "boot_uefi"]
bsp_rpi4 = ["embedded-hal"]
boot_bios = []
boot_uefi = ["uefi", "uefi-services"]

[dependencies]
log = "0.4.20"
embedded-hal = { version = "0.2.7", optional = true }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.4.0"

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { version = "0.26.0", optional = true }
uefi-services = { version = "0.23.0", optional = true }
